--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jre-10.0.2/lib/mysql-connector.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre-10.0.2/lib/ext"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
