Major Updates-Voting Page

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,14 @@
 /Home$2$1.class
 /Images/
 /Votingpage.class
+/Votingpage$1.class
+/Votingpage$2.class
+/Votingpage$3.class
+/Votingpage$4.class
+/Votingpage$5.class
+/Votingpage$6.class
+/Indec.class
+/Index.class
+/Index$1.class
+/random.class
+/random$1.class
