--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,15 +1,3 @@
+/Home$1.class
 /Home$2$1.class
-/Images/
-/Votingpage.class
-/Votingpage$1.class
-/Votingpage$2.class
-/Votingpage$3.class
-/Votingpage$4.class
-/Votingpage$5.class
-/Votingpage$6.class
-/Indec.class
-/Index.class
-/Index$1.class
-/random.class
-/random$1.class
-/Result.class
+/Home$2.class
